--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,3 +1,7 @@
 
-
-
+.sds-redefine-section {
+    padding-top: 120px;
+}
+.redefine_wrapper {
+    background-color: var(--sds-color-theme-primary);
+}
