--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,14 +19,13 @@
 /**----------------------------------------
 START: Theme Default CSS
 ----------------------------------------*/
-@import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&family=Old+Standard+TT:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap");
 :root {
   /**
      @Font-Family Declaration
    */
-  --tj-ff-body: 'Jost', sans-serif;
-  --tj-ff-heading: 'Old Standard TT', serif;
-  --tj-ff-p: 'Jost', sans-serif;
+  --tj-ff-body: 'Archivo', serif;
+  --tj-ff-heading: 'Oswald', serif;
   --tj-ff-fontawesome: "Font Awesome 6 Pro";
   /**
      @Font-weight Declaration
@@ -44,11 +43,10 @@ START: Theme Default CSS
   /**
      @Font-Size Declaration
    */
-  --tj-fs-body: 14px;
-  --tj-fs-p: 14px;
-  --tj-fs-h1: 40px;
-  --tj-fs-h2: 36px;
-  --tj-fs-h3: 24px;
+  --tj-fs-body: 16px;
+  --tj-fs-h1: 144px;
+  --tj-fs-h2: 64px;
+  --tj-fs-h3: 40px;
   --tj-fs-h4: 20px;
   --tj-fs-h5: 16px;
   --tj-fs-h6: 14px;
@@ -57,21 +55,12 @@ START: Theme Default CSS
    */
   --tj-color-common-white: #ffffff;
   --tj-color-common-black: #000000;
-  --tj-color-heading-primary: #343a40;
-  --tj-color-text-body: #777777;
-  --tj-color-theme-primary: #de2021;
-  --tj-color-theme-bg: #fff1f1;
+  --tj-color-heading-primary: #000000;
+  --tj-color-text-body: #000000;
+  --tj-color-theme-primary: #FFEC3E;
   --tj-color-grey-1: #c5c5c5;
   --tj-color-grey-2: #aeaeae;
-  --tj-color-grey-3: #acacac;
-  --tj-color-grey-4: #999999;
-  --tj-color-grey-5: #f7f7f7;
-  --tj-color-grey-6: #b7b7b7;
-  --tj-color-grey-7: #a6aeb5;
-  --tj-color-grey-8: #edf2f6;
   --tj-color-border-1: #ededed;
-  --tj-color-border-2: #e9e9e9;
-  --tj-color-border-3: #999999;
 }
 
 * {
@@ -92,6 +81,12 @@ body {
   line-height: 1.6;
 }
 
+body,
+.site-main {
+  position: relative;
+  overflow-x: hidden;
+}
+
 a {
   text-decoration: none;
 }
@@ -105,7 +100,7 @@ h6 {
   font-family: var(--tj-ff-heading);
   color: var(--tj-color-heading-primary);
   margin-top: 0px;
-  font-weight: var(--tj-fw-sbold);
+  font-weight: var(--tj-fw-bold);
   line-height: 1.2;
   -webkit-transition: all 0.3s ease-in-out 0s;
   transition: all 0.3s ease-in-out 0s;
@@ -121,6 +116,26 @@ h2 {
 
 h3 {
   font-size: var(--tj-fs-h3);
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  h3 {
+    font-size: 35px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  h3 {
+    font-size: 30px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  h3 {
+    font-size: 25px;
+  }
+}
+@media (max-width: 575px) {
+  h3 {
+    font-size: 20px;
+  }
 }
 
 h4 {
@@ -332,10 +347,455 @@ img {
   overflow: hidden;
 }
 
+.container,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+  max-width: 1760px;
+}
+
+@media (max-width: 575px) {
+  .row {
+    padding-left: 13px;
+    padding-right: 13px;
+  }
+}
 /**
   Buttons CSS
 */
+.text-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 12px;
+     -moz-column-gap: 12px;
+          column-gap: 12px;
+  font-family: var(--tj-ff-heading);
+  font-size: 16px;
+  font-weight: var(--tj-fw-bold);
+  text-transform: uppercase;
+  line-height: 1;
+}
+.text-btn span {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 24px;
+  height: 24px;
+  font-size: 12px;
+  color: var(--tj-color-common-white);
+  background-color: var(--tj-color-common-black);
+  border-radius: 50%;
+}
+
+.sds-redefine-section {
+  padding-top: 120px;
+}
+
+.redefine_wrapper {
+  background-color: var(--sds-color-theme-primary);
+}
+
 /**----------------------------------------
-START: Theme Header CSS
+START: Redefine CSS
 ----------------------------------------*/
-/* !END: Theme Header CSS *//*# sourceMappingURL=main.css.map */
+.sds-redefine-section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .sds-redefine-section {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 575px) {
+  .sds-redefine-section {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+}
+
+.redefine_wrapper {
+  position: relative;
+  background-color: var(--tj-color-theme-primary);
+  border-radius: 64px;
+  padding: 120px 70px 165px;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.redefine_wrapper .redefine_title {
+  max-width: 895px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 143px;
+}
+.redefine_wrapper .redefine_title .title {
+  font-size: 144px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  letter-spacing: -0.01em;
+  line-height: 1;
+}
+@media only screen and (min-width: 1400px) and (max-width: 1600px), only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .redefine_wrapper .redefine_title {
+    margin-bottom: 100px;
+  }
+  .redefine_wrapper .redefine_title .title {
+    font-size: 100px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .redefine_wrapper .redefine_title {
+    max-width: 620px;
+    margin-bottom: 90px;
+  }
+  .redefine_wrapper .redefine_title .title {
+    font-size: 80px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .redefine_wrapper {
+    padding: 100px 70px 140px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .redefine_wrapper {
+    padding: 90px 70px 110px;
+    border-radius: 44px;
+  }
+  .redefine_wrapper .redefine_title {
+    margin-bottom: 80px;
+  }
+  .redefine_wrapper .redefine_title .title {
+    font-size: 70px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .redefine_wrapper {
+    padding: 80px 70px 110px;
+    border-radius: 34px;
+  }
+  .redefine_wrapper .redefine_title {
+    margin-bottom: 50px;
+  }
+  .redefine_wrapper .redefine_title .title {
+    font-size: 60px;
+  }
+}
+@media (max-width: 575px) {
+  .redefine_wrapper {
+    padding: 80px 45px 110px 56px;
+    border-radius: 24px;
+  }
+  .redefine_wrapper .redefine_title {
+    max-width: 285px;
+    margin-bottom: 48px;
+  }
+  .redefine_wrapper .redefine_title .title {
+    font-size: 32px;
+    line-height: 1.2;
+  }
+}
+
+.redefine_item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-column-gap: 8px;
+     -moz-column-gap: 8px;
+          column-gap: 8px;
+  max-width: 1167px;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.redefine_item .redefine_images {
+  position: relative;
+  max-width: 500px;
+  width: 100%;
+  -webkit-transform: rotate(-5deg);
+      -ms-transform: rotate(-5deg);
+          transform: rotate(-5deg);
+  border: 15px solid var(--tj-color-common-white);
+}
+.redefine_item .redefine_images .shapes-1 {
+  position: absolute;
+  top: 45px;
+  left: -55%;
+  max-width: 350px;
+  width: 100%;
+}
+.redefine_item .redefine_content {
+  position: relative;
+  max-width: 560px;
+  width: 100%;
+  background-color: var(--tj-color-common-white);
+  padding: 120px 64px;
+  -webkit-transform: rotate(5deg);
+      -ms-transform: rotate(5deg);
+          transform: rotate(5deg);
+}
+.redefine_item .redefine_content .title {
+  text-transform: uppercase;
+  letter-spacing: -0.02em;
+  margin-bottom: 50px;
+}
+.redefine_item .redefine_content .desc {
+  font-size: 20px;
+  letter-spacing: -0.01em;
+  line-height: 1.4;
+}
+.redefine_item .redefine_content .desc p {
+  margin-bottom: 30px;
+}
+.redefine_item .redefine_content .desc p:last-child {
+  margin-bottom: 0;
+}
+.redefine_item .redefine_content .redefine_button {
+  margin-top: 45px;
+}
+.redefine_item .redefine_content .shapes-2 {
+  max-width: 225px;
+  width: 100%;
+  position: absolute;
+  top: 55%;
+  right: -45%;
+}
+.redefine_item .redefine_content .shapes-3 {
+  max-width: 265px;
+  width: 100%;
+  position: absolute;
+  bottom: -12.4%;
+  left: -29.5%;
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .redefine_item .redefine_content .title {
+    margin-bottom: 40px;
+  }
+}
+@media only screen and (min-width: 1601px) and (max-width: 1770px) {
+  .redefine_item .redefine_images .shapes-1 {
+    top: 80px;
+    left: -37%;
+    max-width: 240px;
+  }
+}
+@media only screen and (min-width: 1400px) and (max-width: 1600px) {
+  .redefine_item {
+    max-width: 1020px;
+  }
+  .redefine_item .redefine_images {
+    max-width: 450px;
+  }
+  .redefine_item .redefine_images .shapes-1 {
+    top: 70px;
+    left: -40%;
+    max-width: 220px;
+  }
+  .redefine_item .redefine_content {
+    max-width: 520px;
+    padding: 120px 50px;
+  }
+  .redefine_item .redefine_content .shapes-2 {
+    max-width: 175px;
+    top: 55%;
+    right: -38%;
+  }
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .redefine_item {
+    max-width: 925px;
+  }
+  .redefine_item .redefine_images {
+    max-width: 400px;
+  }
+  .redefine_item .redefine_images .shapes-1 {
+    top: 65px;
+    left: -32%;
+    max-width: 180px;
+  }
+  .redefine_item .redefine_content {
+    max-width: 460px;
+    padding: 90px 40px;
+  }
+  .redefine_item .redefine_content .shapes-2 {
+    max-width: 150px;
+    top: 55%;
+    right: -36%;
+  }
+  .redefine_item .redefine_content .shapes-3 {
+    max-width: 180px;
+    bottom: -8.4%;
+    left: -24.5%;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .redefine_item {
+    max-width: 795px;
+  }
+  .redefine_item .redefine_images {
+    max-width: 360px;
+  }
+  .redefine_item .redefine_images .shapes-1 {
+    top: 60px;
+    left: -24%;
+    max-width: 145px;
+  }
+  .redefine_item .redefine_content {
+    max-width: 376px;
+    padding: 60px 30px;
+  }
+  .redefine_item .redefine_content .shapes-2 {
+    max-width: 120px;
+    top: 55%;
+    right: -34%;
+  }
+  .redefine_item .redefine_content .shapes-3 {
+    max-width: 150px;
+    bottom: -8.4%;
+    left: -24.5%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .redefine_item {
+    max-width: 795px;
+  }
+  .redefine_item .redefine_images {
+    max-width: 410px;
+  }
+  .redefine_item .redefine_images .shapes-1 {
+    top: 40px;
+    left: -15%;
+    max-width: 145px;
+  }
+  .redefine_item .redefine_content {
+    max-width: 520px;
+    padding: 60px 30px;
+  }
+  .redefine_item .redefine_content .shapes-2 {
+    max-width: 120px;
+    top: 55%;
+    right: -25%;
+  }
+  .redefine_item .redefine_content .shapes-3 {
+    max-width: 150px;
+    bottom: -9%;
+    left: 3%;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .redefine_item {
+    max-width: 795px;
+  }
+  .redefine_item .redefine_images {
+    max-width: 410px;
+  }
+  .redefine_item .redefine_images .shapes-1 {
+    top: 20px;
+    left: -15%;
+    max-width: 145px;
+  }
+  .redefine_item .redefine_content {
+    max-width: 100%;
+    padding: 50px 25px;
+    margin-top: -20px;
+  }
+  .redefine_item .redefine_content .title {
+    margin-bottom: 25px;
+  }
+  .redefine_item .redefine_content .desc {
+    font-size: 18px;
+  }
+  .redefine_item .redefine_content .desc p {
+    margin-bottom: 20px;
+  }
+  .redefine_item .redefine_content .shapes-2 {
+    max-width: 110px;
+    top: -20px;
+    right: -10%;
+  }
+  .redefine_item .redefine_content .shapes-3 {
+    max-width: 130px;
+    bottom: -13%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+  .redefine_item .redefine_content .redefine_button {
+    margin-top: 35px;
+  }
+}
+@media (max-width: 575px) {
+  .redefine_item {
+    max-width: 795px;
+  }
+  .redefine_item .redefine_images {
+    max-width: 225px;
+    border: 7px solid var(--tj-color-common-white);
+    left: -22px;
+  }
+  .redefine_item .redefine_images .shapes-1 {
+    top: -25px;
+    left: -10%;
+    max-width: 94px;
+  }
+  .redefine_item .redefine_content {
+    max-width: 280px;
+    padding: 48px 24px;
+    margin-top: -75px;
+  }
+  .redefine_item .redefine_content .title {
+    max-width: 230px;
+    width: 100%;
+    margin-bottom: 25px;
+    letter-spacing: -0.01em;
+    line-height: 1.4;
+  }
+  .redefine_item .redefine_content .desc {
+    font-size: 14px;
+    letter-spacing: initial;
+  }
+  .redefine_item .redefine_content .desc p {
+    margin-bottom: 20px;
+  }
+  .redefine_item .redefine_content .shapes-2 {
+    max-width: 96px;
+    top: -20px;
+    right: -3%;
+  }
+  .redefine_item .redefine_content .shapes-3 {
+    max-width: 114px;
+    bottom: -13%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+  .redefine_item .redefine_content .redefine_button {
+    margin-top: 36px;
+  }
+}
+
+/* !END: Redefine CSS *//*# sourceMappingURL=main.css.map */
