--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -3,3 +3,25 @@
 /**
   Buttons CSS
 */
+.text-btn {
+  display: flex;
+  align-items: center;
+  column-gap: 12px;
+  font-family: var(--tj-ff-heading);
+  font-size: 16px;
+  font-weight: var(--tj-fw-bold);
+  text-transform: uppercase;
+  line-height: 1;
+  span {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    font-size: 12px;
+    color: var(--tj-color-common-white);
+    background-color: var(--tj-color-common-black);
+    border-radius: 50%;
+  }
+}
+
