--- a/assets/sass/utilities/_colors.scss
+++ b/assets/sass/utilities/_colors.scss
@@ -4,28 +4,19 @@ $colors: (
 		black: #000000,
 	),
 	heading: (
-		primary: #343a40,
+		primary: #000000,
 	),
 	text: (
-		body: #777777,
+		body: #000000,
 	),
 	theme: (
-		primary: #de2021,
-		bg: #fff1f1,
+		primary: #FFEC3E,
 	),
 	grey: (
 		1: #c5c5c5,
 		2: #aeaeae,
-		3: #acacac,
-		4: #999999,
-		5: #f7f7f7,
-		6: #b7b7b7,
-		7: #a6aeb5,
-		8: #edf2f6,
 	),
 	border: (
 		1: #ededed,
-		2: #e9e9e9,
-		3: #999999,
 	),
 );
